foundation/gitops/manual_deploy/dusk/rc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dusk-rc-ns
  labels:
    name: dusk-rc-ns
    environment: rc
    tier: rc
    cluster: trantor
